[package]
name = "cessp-consensus-slots"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for slots-based consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
cessp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../runtime" }
cessp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../../arithmetic" }

[features]
default = ["std"]
std = [
	"codec/std",
	"cessp-runtime/std",
	"cessp-arithmetic/std",
]
