[package]
name = "cessp-runtime-interface-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cessp-runtime-interface = { version = "4.0.0-dev", path = "../" }
sc-executor = { version = "0.10.0-dev", path = "../../../client/executor" }
sc-executor-common = { version = "0.10.0-dev", path = "../../../client/executor/common" }
cessp-runtime-interface-test-wasm = { version = "2.0.0", path = "../test-wasm" }
cessp-runtime-interface-test-wasm-deprecated = { version = "2.0.0", path = "../test-wasm-deprecated" }
sp-state-machine = { version = "0.10.0-dev", path = "../../state-machine" }
sp-runtime = { version = "4.0.0-dev", path = "../../runtime" }
sp-io = { version = "4.0.0-dev", path = "../../io" }
tracing = "0.1.25"
tracing-core = "0.1.17"
