[package]
name = "cess-frame-support-test-pallet"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cess-frame-support = { version = "4.0.0-dev", default-features = false, path = "../../" }
cess-frame-system = { version = "4.0.0-dev", default-features = false, path = "../../../system" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"cess-frame-support/std",
	"cess-frame-system/std",
]
